# Limc

./: .gitignore  LICENSE  README.md
Exp.1-Lexer/: Makefile  color.h  compiler  lexer.l
Exp.1-Lexer/test/: copy.c  fibo.c
Exp.2-Parser/: Makefile  readme.md
Exp.2-Parser-new/: readme.md
Exp.2-Parser-new/test/: simple.c
Exp.2-Parser/generate/: parser.y  scanner.l
Exp.2-Parser/output/: compiler
Exp.2-Parser/src/: driver.cpp  driver.h  main.cpp  scanner.h  token.cpp  token.h
Exp.2-Parser/test/: comment.c  copy.c  fibo.c  simple.c
Exp.3-Semantic/: .clang-format  CMakeLists.txt  Makefile  entry  example.md  readme.md
Exp.3-Semantic/lib/: cxxopts.hpp  patterns.hpp
Exp.3-Semantic/src/: 0-driver.cc  0-driver.h  0-report.cc  0-report.h  0-token.cc  0-token.h  1-scanner.h  1-scanner.l  2-parser.y  3-analyzer.cc  3-analyzer.cc.backup  3-analyzer.h  3-symbol.cc  3-symbol.h  3-type.cc  3-type.h  analyzer.h  driver.cpp  driver.h  main.cc  main.cpp  parser.y  scanner.l  symbol.h  token.cpp  token.h  util.h
Exp.3-Semantic/src/S.3-Analyzer/: analyzer.h  symbol.h
Exp.3-Semantic/test/: comment.c  copy.c  errors.c  fibo.c  simple.c
Exp.4-IR/: CMakeLists.txt  Makefile  TODO.todo  limc  readme.md
Exp.4-IR/asm/: simple  simple.c  simple.s
Exp.4-IR/backup/: 4-gen_ir.h  tmp
Exp.4-IR/src/: 0-driver.cc  0-driver.h  0-report.cc  0-report.h  0-token.cc  0-token.h  2-parser.y  3-analyzer.cc  3-analyzer.h  3-symbol.cc  3-symbol.h  3-type.cc  3-type.h  4-gen_ir.cc  4-gen_ir.h  4-ir.cc  4-ir.h  main.cc
Exp.4-IR/test/: arr.lc  fp.lc  qs.lc  simple.c  simple.lc
Exp.5-x86_64/: .clang-format  CMakeLists.txt  Makefile  limc  readme.md
Exp.5-x86_64/asm/: a.c  a.s
Exp.5-x86_64/lib/: cxxopts.hpp
Exp.5-x86_64/src/: 0-driver.cc  0-driver.h  0-report.cc  0-report.h  0-token.cc  0-token.h  1-scanner.l  2-parser.y  3-analyzer.cc  3-analyzer.h  3-symbol.cc  3-symbol.h  3-type.cc  3-type.h  4-gen_ir.cc  4-gen_ir.h  4-ir.cc  4-ir.h  5-gen_x86-64.cc  5-gen_x86-64.h  5-reg_alloc.cc  5-reg_alloc.h  main.cc  util.h
Exp.5-x86_64/test/: arr.lc  fact.lc  fib.lc  fp.lc  (+4 more)
(+22 files in other folders)
